--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<html>
+        <head>
+                <title>Trevor Burke</title>
+        </head>
+        <body>
+                <h2>About</h2>
+                <p></p>
+                <h2>Experience</h2>
+                <p></p>
+                <h2>Interest</h2>
+</html>
