--- a/index.html
+++ b/index.html
@@ -8,4 +8,7 @@
                 <h2>Experience</h2>
                 <p></p>
                 <h2>Interest</h2>
+                <h2>Social Media</h2>
+                <a href="https://www.linkedin.com/in/trevor-burke-9217824b
+">LinkedIn Page</a>
 </html>
