add image, more headings

--- a/index.html
+++ b/index.html
@@ -1,13 +1,39 @@
+<!DOCTYPE html>
 <html>
         <head>
                 <title>Trevor Burke</title>
         </head>
         <body>
+            <div class="About">
                 <h2>About</h2>
-                <p></p>
+                    <p>22 year old recent graduate</p>
+                    <p>Learning Python for machine learning and data science</p>
+                    <p>Also interested in spatial analysis</p>
+                    <p>Beginning to learn HTML, CSS, and JS</p>
+                    <img src="images/climbing_ent_gully.jpg" width="600px" alt="ent gully" />
+            </div>
+            <div class="Experience">
                 <h2>Experience</h2>
-                <p></p>
-                <h2>Interest</h2>
+                    <p>Self-taught programmer and data scientist</p>
+                    <p>Landscape planner</p>
+                    <p>Climbing guide</p>
+            </div>
+            <div class="Interests">
+                <h2>Interests</h2>
+                        <ul>
+                                <li>Rock climbing</li>
+                                <li>Skiing</li>
+                                <li>Mountain biking</li>
+                        </ul>
+            </div>
+            <div class="Social Media">
                 <h2>Social Media</h2>
                 <a href="https://www.linkedin.com/in/trevor-burke-9217824b">LinkedIn Page</a>
+                <br />
+                <a href="https://www.facebook.com/trevor.burke.1654">Facebook</a>
+            </div>
+            <div class="Copyright">
+                    <br />
+                    Copyright &copy; 2016 Trevor Burke
+            </div>
 </html>
