--- a/about.html
+++ b/about.html
@@ -20,8 +20,12 @@
                 </div>
                 
                 <div id="main">
-                    <h2>Home page</h2>
-                    <p>This is my webpage. Welcome!</p>                    
+                    <h2>About</h2>
+                        <p>22 year old recent graduate</p>
+                        <p>Learning Python for machine learning and data science</p>
+                        <p>Also interested in spatial analysis</p>
+                        <p>Beginning to learn HTML, CSS, and JS</p>
+                        <img src="images/climbing_ent_gully.jpg" width="600px" alt="ent gully" />
                 </div>
             </div>
             <div id="footer">
