--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,10 @@
                 </div>
                 
                 <div id="main">
-                    <h2>Home page</h2>
-                    <p>This is my webpage. Welcome!</p>                    
+                    <h2>Contact</h2>
+                    <p>415-794-4111</p>
+                    <p><a href="https://www.linkedin.com/in/trevor-burke-9217824b">LinkedIn Page</a></p>
+                    <p><a href="https://www.facebook.com/trevor.burke.1654">Facebook</a></p>
                 </div>
             </div>
             <div id="footer">
