Add image to index.html

--- a/about.html
+++ b/about.html
@@ -18,13 +18,15 @@
                         <li><a class="contact" href="contact.html">Contact</a></li>
                     </ul>
                 </div>
-                
+
                 <div id="main">
                     <h2>About</h2>
-                        <p>22 year old recent graduate</p>
-                        <p>Learning Python for machine learning and data science</p>
-                        <p>Also interested in spatial analysis</p>
-                        <p>Beginning to learn HTML, CSS, and JS</p>
+                    <ul>
+                        <li>22 year old recent graduate</li>
+                        <li>Learning Python for machine learning and data science</li>
+                        <li>Also interested in spatial analysis</li>
+                        <li>Beginning to learn HTML, CSS, and JS</li>
+                    </ul>
                         <img src="images/climbing_ent_gully.jpg" width="600px" alt="ent gully" />
                 </div>
             </div>
