--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
                         <li><a class="contact" href="contact.html">Contact</a></li>
                     </ul>
                 </div>
-                
+
                 <div id="main">
                     <h2>Home page</h2>
-                    <p>This is my webpage. Welcome!</p>                    
+                    <p>This is my webpage. Welcome!</p>
+                    <img source="images/sparkling_touch_IC.jpg" width =1200px alt="IC" />                 
                 </div>
             </div>
             <div id="footer">
