Add resize image to index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div id="main">
                     <h2>Home page</h2>
                     <p>This is my webpage. Welcome!</p>
-                    <img source="images/sparkling_touch_IC.jpg" width =1200px alt="IC" />                 
+                    <img src="images/donnely_canyon.jpg" width=600px alt="Donnely Canyon" />
                 </div>
             </div>
             <div id="footer">
