add link to index.html image

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div id="main">
                     <h2>Home page</h2>
                     <p>This is my webpage. Welcome!</p>
-                    <img src="images/donnely_canyon.jpg" width=600px alt="Donnely Canyon" />
+                    <a class="donn c" href="images/donnely_canyon.jpg"><img src="images/donnely_canyon.jpg" width=600px alt="Donnely Canyon" /></a>
                 </div>
             </div>
             <div id="footer">
