Add github link to read.html

--- a/contact.html
+++ b/contact.html
@@ -18,12 +18,13 @@
                         <li><a class="contact" href="contact.html">Contact</a></li>
                     </ul>
                 </div>
-                
+
                 <div id="main">
                     <h2>Contact</h2>
                     <p>415-794-4111</p>
                     <p><a href="https://www.linkedin.com/in/trevor-burke-9217824b">LinkedIn Page</a></p>
                     <p><a href="https://www.facebook.com/trevor.burke.1654">Facebook</a></p>
+                    <p><a href="https://github.com/trevorpburke">GitHub</a></p>
                 </div>
             </div>
             <div id="footer">
