--- a/contact.html
+++ b/contact.html
@@ -22,9 +22,12 @@
                 <div id="main">
                     <h2>Contact</h2>
                     <p>415-794-4111</p>
-                    <p><a href="https://www.linkedin.com/in/trevor-burke-9217824b">LinkedIn Page</a></p>
-                    <p><a href="https://www.facebook.com/trevor.burke.1654">Facebook</a></p>
-                    <p><a href="https://github.com/trevorpburke">GitHub</a></p>
+                    <a href="https://www.linkedin.com/pub/trevor-burke/4b/782/921">
+                      <img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_viewmy_160x33.png" width="160" height="33" border="0" alt="View Trevor Burke's profile on LinkedIn"></a>
+
+                    <p><a target="_blank" title="follow me on facebook" href="https://www.facebook.com/trevor.burke.1654"><img alt="follow me on facebook" src="https://c866088.ssl.cf3.rackcdn.com/assets/facebook40x40.png" border=0></a></p>
+                    <a class="github logo" href="https://github.com/trevorpburke"><img src="images/GitHub-Mark-64px.png" alt="github" /></a>
+
                 </div>
             </div>
             <div id="footer">
