--- a/about.html
+++ b/about.html
@@ -22,10 +22,10 @@
                 <div id="main">
                     <h2>About</h2>
                     <ul>
-                        <li>22 year old recent graduate</li>
-                        <li>Learning Python for machine learning and data science</li>
-                        <li>Also interested in spatial analysis</li>
-                        <li>Beginning to learn HTML, CSS, and JS</li>
+                        <li>Early 20s Bay Area native</li>
+                        <li>Aspiring data scientist and web developer</li>
+                        <li>Interested in machine learning, GIS, and web applications</li>
+                        <li>Climber, biker, skiier, adventurer</li>
                     </ul>
                         <img src="images/climbing_ent_gully.jpg" width="600px" alt="ent gully" />
                 </div>
