--- a/firstPage.html
+++ b/firstPage.html
@@ -25,7 +25,7 @@
 		var map = L.mapbox.map('map', 'mapbox.streets')
     		.setView([44.35, -68.3], 11);
 
-    	var runLayer = omnivore.gpx('stravaRuns/20150711-144059-Run.gpx')
+    	var runLayer = omnivore.gpx('stravaRuns')
     		.on('ready', function() {
         		map.fitBounds(runLayer.getBounds());
     		})
