--- a/firstPage.html
+++ b/firstPage.html
@@ -25,11 +25,17 @@
 		var map = L.mapbox.map('map', 'mapbox.streets')
     		.setView([44.35, -68.3], 11);
 
-    	var runLayer = omnivore.gpx('stravaRuns/20150711-144059-Run.gpx', 'stravaRuns/20150713-224231-Run.gpx')
+    	var runLayer = omnivore.gpx('stravaRuns/20150711-144059-Run.gpx')
     		.on('ready', function() {
         		map.fitBounds(runLayer.getBounds());
     		})
     		.addTo(map);
+    	var runLayer = omnivore.gpx('stravaRuns/20150713-224231-Run.gpx')
+    		.on('ready', function() {
+        		map.fitBounds(runLayer.getBounds());
+    		})
+    		.addTo(map);
+
 		</script>
 
 	</body>
