add more gpx files

--- a/firstPage.html
+++ b/firstPage.html
@@ -65,11 +65,56 @@
         		map.fitBounds(runLayer.getBounds());
     		})
     		.addTo(map);
-    	var runLayer1 = omnivore.gpx(gpx_array[3])
+    	var runLayer3 = omnivore.gpx(gpx_array[3])
     		.on('ready', function() {
         		map.fitBounds(runLayer.getBounds());
     		})
     		.addTo(map);
+
+        var runLayer4 = omnivore.gpx(gpx_array[4])
+    		.on('ready', function() {
+        		map.fitBounds(runLayer.getBounds());
+    		})
+    		.addTo(map);
+    	var runLayer5 = omnivore.gpx(gpx_array[5])
+    		.on('ready', function() {
+        		map.fitBounds(runLayer.getBounds());
+    		})
+    		.addTo(map);
+
+    	var runLayer6 = omnivore.gpx(gpx_array[6])
+    		.on('ready', function() {
+        		map.fitBounds(runLayer.getBounds());
+    		})
+    		.addTo(map);
+    	var runLayer7 = omnivore.gpx(gpx_array[7])
+    		.on('ready', function() {
+        		map.fitBounds(runLayer.getBounds());
+    		})
+    		.addTo(map);
+    	var runLayer8 = omnivore.gpx(gpx_array[8])
+    		.on('ready', function() {
+        		map.fitBounds(runLayer.getBounds());
+    		})
+    		.addTo(map);
+    	var runLayer9 = omnivore.gpx(gpx_array[9])
+    		.on('ready', function() {
+        		map.fitBounds(runLayer.getBounds());
+    		})
+    		.addTo(map);
+
+        var runLayer10 = omnivore.gpx(gpx_array[10])
+    		.on('ready', function() {
+        		map.fitBounds(runLayer.getBounds());
+    		})
+    		.addTo(map);
+    	var runLayer11 = omnivore.gpx(gpx_array[11])
+    		.on('ready', function() {
+        		map.fitBounds(runLayer.getBounds());
+    		})
+    		.addTo(map);
+
+	
     	
 
 		</script>
