add all gpx files

--- a/firstPage.html
+++ b/firstPage.html
@@ -113,7 +113,27 @@
         		map.fitBounds(runLayer.getBounds());
     		})
     		.addTo(map);
+		var runLayer12 = omnivore.gpx(gpx_array[12])
+    		.on('ready', function() {
+        		map.fitBounds(runLayer.getBounds());
+    		})
+    		.addTo(map);
+    	var runLayer13 = omnivore.gpx(gpx_array[13])
+    		.on('ready', function() {
+        		map.fitBounds(runLayer.getBounds());
+    		})
+    		.addTo(map);
 
+        var runLayer14 = omnivore.gpx(gpx_array[14])
+    		.on('ready', function() {
+        		map.fitBounds(runLayer.getBounds());
+    		})
+    		.addTo(map);
+    	var runLayer15 = omnivore.gpx(gpx_array[15])
+    		.on('ready', function() {
+        		map.fitBounds(runLayer.getBounds());
+    		})
+    		.addTo(map);
 	
     	
 
