--- a/firstPage.html
+++ b/firstPage.html
@@ -40,16 +40,15 @@
 		
 		var map = L.mapbox.map('map', 'mapbox.streets')
     		.setView([44.35, -68.3], 11);
-    	
+    	/*
     	var runLayer = gpx_array.map(function(file){
     		return omnivore.gpx(file)
     			.on('ready', function(){
-    				map.fitBounds();
+    				map.fitBounds(runLayer.getBounds());
     			})
 
-    	})
+    	})*/
 
-    	/*
     	// add 
     	var runLayer = omnivore.gpx(gpx_array[0])
     		.on('ready', function() {
@@ -135,7 +134,6 @@
         		map.fitBounds(runLayer.getBounds());
     		})
     		.addTo(map);
-    	*/
 	
     	
 
