try adding just array variable to omnivore.gpx

--- a/firstPage.html
+++ b/firstPage.html
@@ -40,22 +40,23 @@
 		
 		var map = L.mapbox.map('map', 'mapbox.streets')
     		.setView([44.35, -68.3], 11);
-    	
+    	/*
     	var runLayer = gpx_array.map(function(file){
     		omnivore.gpx(file)
     			.on('ready', function(){
     				map.fitBounds(runLayer.getBounds());
     			})
-
     	})
+    	*/
 
     	// add 
-    	/*
-    	var runLayer = omnivore.gpx(gpx_array[0])
+    	
+    	var runLayer = omnivore.gpx([gpx_array])
     		.on('ready', function() {
         		map.fitBounds(runLayer.getBounds());
     		})
     		.addTo(map);
+    	/*
     	var runLayer1 = omnivore.gpx(gpx_array[1])
     		.on('ready', function() {
         		map.fitBounds(runLayer.getBounds());
