--- a/firstPage.html
+++ b/firstPage.html
@@ -51,7 +51,7 @@
 
     	// add 
     	
-    	var runLayer = omnivore.gpx([gpx_array])
+    	var runLayer = omnivore.gpx(gpx_array)
     		.on('ready', function() {
         		map.fitBounds(runLayer.getBounds());
     		})
