add header, see what happens

--- a/firstPage.html
+++ b/firstPage.html
@@ -13,6 +13,7 @@
 	</head>
 
 	<body>
+	<h1>Strava Trail Runs</h1>
 
 	<script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-omnivore/v0.2.0/leaflet-omnivore.min.js'></script>
 
