try adding map() function to end of file to set default zoom

--- a/firstPage.html
+++ b/firstPage.html
@@ -13,7 +13,6 @@
 	</head>
 
 	<body>
-	<h1>Strava Trail Runs</h1>
 
 	<script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-omnivore/v0.2.0/leaflet-omnivore.min.js'></script>
 
@@ -24,6 +23,8 @@
 		L.mapbox.accessToken = 'pk.eyJ1IjoidHJldm9ycGJ1cmtlIiwiYSI6ImNpazA2MzJwMTAwdDV4Ym01YjRxdThzODQifQ.TbsNOsG_WuAzfkT1fNcH6A';
 
 		var map = L.mapbox.map('map', 'mapbox.streets');
+		   		.setView([44.35, -68.3], 11);
+
 
 		var gpx_array = ['stravaRuns/20150711-144059-Run.gpx', 
 						"stravaRuns/20150716-233605-Run.gpx",
@@ -135,6 +136,8 @@
         		map.fitBounds(runLayer.getBounds());
     		})
     		.addTo(map);
+
+    	map();
 
 		</script>
 
