add entire variable declaration to bottom of file

--- a/firstPage.html
+++ b/firstPage.html
@@ -137,7 +137,8 @@
     		})
     		.addTo(map);
 
-    	map();
+		var map = L.mapbox.map('map', 'mapbox.streets');
+		   		.setView([44.35, -68.3], 11);
 
 		</script>
 
