--- a/firstPage.html
+++ b/firstPage.html
@@ -22,7 +22,7 @@
 		<script>
 		L.mapbox.accessToken = 'pk.eyJ1IjoidHJldm9ycGJ1cmtlIiwiYSI6ImNpazA2MzJwMTAwdDV4Ym01YjRxdThzODQifQ.TbsNOsG_WuAzfkT1fNcH6A';
 
-		var map = L.mapbox.map('map', 'mapbox.streets');
+		var map = L.mapbox.map('map', 'mapbox.streets')
 		   		.setView([44.35, -68.3], 11);
 
 
