--- a/firstPage.html
+++ b/firstPage.html
@@ -137,6 +137,10 @@
     		})
     		.addTo(map);
 
+    	var map = L.mapbox.map('map', 'mapbox.streets')
+		   	.setView([44.35, -68.3], 11);
+
+
 		</script>
 
 	</body>
