--- a/firstPage.html
+++ b/firstPage.html
@@ -22,6 +22,8 @@
 		<script>
 		L.mapbox.accessToken = 'pk.eyJ1IjoidHJldm9ycGJ1cmtlIiwiYSI6ImNpazA2MzJwMTAwdDV4Ym01YjRxdThzODQifQ.TbsNOsG_WuAzfkT1fNcH6A';
 
+		var map = L.mapbox.map('map', 'mapbox.streets');
+
 		var gpx_array = ['stravaRuns/20150711-144059-Run.gpx', 
 						"stravaRuns/20150716-233605-Run.gpx",
 						"stravaRuns/20150726-163103-Run.gpx",
@@ -133,8 +135,7 @@
     		})
     		.addTo(map);
 
-    	var map = L.mapbox.map('map', 'mapbox.streets')
-		   	.setView([44.35, -68.3], 11);
+    	map = map.setView([44.35, -68.3], 11);
 
 
 		</script>
