--- a/firstPage.html
+++ b/firstPage.html
@@ -135,7 +135,8 @@
     		})
     		.addTo(map);
 
-    	map = map.setView([44.35, -68.3], 11);
+    	var map = L.mapbox.map('map', 'mapbox.streets')
+		   	.setView([44.35, -68.3], 11);
 
 
 		</script>
