wrap gpx files in function

--- a/firstPage.html
+++ b/firstPage.html
@@ -23,6 +23,7 @@
 		L.mapbox.accessToken = 'pk.eyJ1IjoidHJldm9ycGJ1cmtlIiwiYSI6ImNpazA2MzJwMTAwdDV4Ym01YjRxdThzODQifQ.TbsNOsG_WuAzfkT1fNcH6A';
 		var map = L.mapbox.map('map', 'mapbox.streets')
 		   		.setView([44.35, -68.3], 11);
+
 		var gpx_array = ['stravaRuns/20150711-144059-Run.gpx', 
 						"stravaRuns/20150716-233605-Run.gpx",
 						"stravaRuns/20150726-163103-Run.gpx",
@@ -51,7 +52,8 @@
     	// add all gpx files to map
     	// do not touch ANYTHING on lines 52-133
 
-    	// TODO: add markers to  
+    	// TODO: add markers to
+    function (){
     	var runLayer = omnivore.gpx(gpx_array[0])
     		.on('ready', function() {
         		map.fitBounds(runLayer.getBounds());
@@ -133,7 +135,8 @@
     		.addTo(map);
     	var map = L.mapbox.map('map', 'mapbox.streets')
 		   	.setView([44.35, -68.3], 11);
-		   	
+		   };
+
 		</script>
 
 	</body>
