initial commit of update mapping application

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
                         <li><a class="selected" href="index.html">Home</a></li>
                         <li><a class="about" href="about.html">About</a></li>
                         <li><a class="contact" href="contact.html">Contact</a></li>
-                        <li><a class="map" href="firstPage.html">Map</a></li>
+                        <li><a class="map" href="climb_map.html">Ultimate Climbing Roadtrip</a></li>
                     </ul>
                 </div>
 
