change to twitter bootstrap

--- a/contact_.html
+++ b/contact_.html
@@ -23,9 +23,9 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li class="active"><a href="index_.html">Home</a></li>
+            <li><a href="about_.html">About</a></li>
+            <li><a href="contact_.html">Contact</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Projects <span class="caret"></span></a>
               <ul class="dropdown-menu">
@@ -42,11 +42,12 @@
       <!-- Main component for a primary marketing message or call to action -->
       <div class="jumbotron">
         <h1 class="text-center">Trevor Burke</h1>
-        <p>Aspiring web development engineer</p>
-        <p>Climber, biker, skiier, adventurer
-        </p>
-        <p>Interested in data analysis, visualization, and machine learning</p>
-      
+        <p>trevorpburke at gmail dot com</p>
+        </br>
+        <p><a href="https://github.com/trevorpburke/" target="blank"><img src="images/GitHub-Mark-64px.png"></p>
+        </br>
+        <p><a href="https://twitter.com/trevorpburke" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @trevorpburke</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></p>
       </div>
 
     </div> <!-- /container -->
