change around some content

--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
 
       <!-- Main component for a primary marketing message or call to action -->
       <div class="jumbotron">
-        <h1 class="text-center">Trevor Burke</h1>
+        <h1 class="text-center">Get in touch</h1>
         <p>trevorpburke at gmail dot com</p>
         </br>
         <p><a href="https://github.com/trevorpburke/" target="blank"><img src="images/GitHub-Mark-64px.png"></p>
