--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
 
       <!-- Main component for a primary marketing message or call to action -->
       <div class="jumbotron">
-        <h1 class="text-center">Trevor Burke</h1>
-        <p></p>
-        <p></p>
+        <h1 class="text-center">Welcome!</h1>
+        <p>This is my personal website where I plan to share my various projects as I learn more about software development. Check out some photos below from my climbing roadtrip in Fall 2015.</p>
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   		<ol class="carousel-indicators">
@@ -57,10 +56,6 @@
   <div class="carousel-inner" role="listbox">
     <div class="item active">
       <img src="images/donnely_canyon.jpg" alt="Donnely Canyon">
-    </div>
-
-    <div class="item">
-      <img src="images/climbing_ent_gully.jpg" alt="ENT Gully, Smuggler's Notch, VT">
     </div>
 
     <div class="item">
