--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
 
       <!-- Main component for a primary marketing message or call to action -->
       <div class="jumbotron">
-        <h1 class="text-center">Trevor Burke</h1>
+        <h1 class="text-center">About me...</h1>
         <p>Aspiring web development engineer</p>
         <p>Climber, biker, skiier, adventurer
         </p>
