--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="home.html">Home</a></li>
+            <li class="active"><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li class="dropdown">
@@ -41,13 +41,42 @@
 
       <!-- Main component for a primary marketing message or call to action -->
       <div class="jumbotron">
-        <h1 class="text-center">Get in touch</h1>
-        <p>trevorpburke at gmail dot com</p>
-        </br>
-        <p><a href="https://github.com/trevorpburke/" target="blank"><img src="images/GitHub-Mark-64px.png"></p>
-        </br>
-        <p><a href="https://twitter.com/trevorpburke" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @trevorpburke</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></p>
+        <h1 class="text-center">Welcome!</h1>
+        <p>This is my personal website where I plan to share my various projects as I learn more about software development. Check out some photos below from my climbing roadtrip in Fall 2015.</p>
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  		<ol class="carousel-indicators">
+    		<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    		<li data-target="#myCarousel" data-slide-to="1"></li>
+    		<li data-target="#myCarousel" data-slide-to="2"></li>
+  		</ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img src="images/donnely_canyon.jpg" alt="Donnely Canyon">
+    </div>
+
+    <div class="item">
+      <img src="images/IC_pano.jpg" alt="Indian Creek, UT Pano">
+    </div>
+
+    <div class="item">
+      <img src="images/pine_creek.jpg" alt="Pine Creek Canyon, CA">
+    </div>
+  </div>
+
+  <!-- Left and right controls -->
+  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
       </div>
 
     </div> <!-- /container -->
