initial commit of TuneCity, user can toggle between cities via dropdown menu, need to add spotify functionality

--- a/about.html
+++ b/about.html
@@ -30,6 +30,7 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Projects <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="climb_map.html" target="blank">Ultimate Climbing Roadtrip Map</a></li>
+                <li><a href="projects/tunecity.html" target="blank">TuneCity</a></li>
               </ul>
             </li>
           </ul>
