--- a/home.html
+++ b/home.html
@@ -30,6 +30,7 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Projects <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="climb_map.html" target="blank">Ultimate Climbing Roadtrip Map</a></li>
+                <li><a href="projects/tunecity.html" target="blank">TuneCity</a></li>
               </ul>
             </li>
           </ul>
@@ -42,7 +43,7 @@
       <!-- Main component for a primary marketing message or call to action -->
       <div class="jumbotron">
         <h1 class="text-center">Welcome!</h1>
-        <p>This is my personal website where I plan to share my various projects as I learn more about software development. Check out some photos below from my climbing roadtrip in Fall 2015.</p>
+        <p class="text-center">This is my personal website where I plan to share my various projects as I learn more about software development. Check out some photos below from my climbing roadtrip in Fall 2015.</p>
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   		<ol class="carousel-indicators">
