--- a/projects/tunecity.html
+++ b/projects/tunecity.html
@@ -32,9 +32,10 @@
 <body>
 <div id='map'></div>
     <div class="container">
-            <h2 class="center-text">TuneCity | The best songs about your city!</h2>
+            <h2 class="center-text">TuneCity | Top rated songs about your city!</h2>
             <input autocomplete="off" placeholder="Search here..." class="input-lg"type="text" id="search" ></input>
     </div>
+    <div id="results"></div>
 </div>
 <script src="map_app.js"></script>
 </body>
