change js code to work in both Firefox and Chrome

--- a/projects/tunecity.html
+++ b/projects/tunecity.html
@@ -33,7 +33,7 @@
 <div id='map'></div>
     <div class="container">
             <h2 class="center-text">TuneCity | Top rated songs about your city!</h2>
-            <input autocomplete="off" placeholder="Search here..." class="input-lg"type="text" id="search" ></input>
+            <input autocomplete="off" placeholder="Search here..." class="input-lg"type="text" id="search" autofocus></input>
     </div>
     <div id="results"></div>
 </div>
